--- a/MultipleAppModulesExample/login/src/main/AndroidManifest.xml
+++ b/MultipleAppModulesExample/login/src/main/AndroidManifest.xml
@@ -1,10 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="me.abunka.multipleappmodules.login" >
+    package="me.abunka.multipleappmodules.login">
 
     <application>
-        <activity
-            android:name="me.abunka.multipleappmodules.login.LoginActivity">
-        </activity>
+        <activity android:name="me.abunka.multipleappmodules.login.LoginActivity"></activity>
     </application>
 
 
